Implement (some) wednesday meeting suggestions...